# codeduo

./: .gitignore  API_DOCUMENTATION.md  AUTOMATIC_DEPLOYMENT_SETUP.md  BACKEND_API_REFERENCE.md  BACKEND_IMPROVEMENTS.md  DEPLOYMENT_STATUS.md  FIX_LOGIN_SIGNUP.md  FRONTEND_API_CONFIG.md  README.md  RENDER_SETUP_CHECKLIST.md  connection-status.md  frontend.bat  render.yaml  test-backend-api.js  test-connection.js
backend/: BACKEND_CHECK_SUMMARY.md  DEPLOYMENT.md  env.example  package-lock.json  package.json  server.js  start-and-test.js  test-backend-comprehensive.js  test-server-startup.js
backend/controllers/: authController.js  badgesController.js  leaderboardController.js  optionsController.js  questionController.js  quizController.js
backend/express-api/: DEPLOYMENT.md  RENDER_AUTO_START_GUIDE.md  env.example  package-lock.json  package.json  server.js
backend/middleware/: adminAuth.js  asyncHandler.js  auth.js  (+3 more)
backend/quart-api/: pyproject.toml
backend/quart-api/src/quart_api/: __init__.py  main.py
docs/: ARCHITECTURE.md  BACKEND_DEPLOYMENT.md  BACKEND_IMPROVEMENTS.md  CONNECTION_STATUS.md  DEPLOYMENT_STATUS.md  FIX_LOGIN_SIGNUP.md  FRONTEND_API_CONFIG.md
frontend/: DEPLOYMENT.md  README.md  build_log.txt  env.production  index.html  jsconfig.json  next.config.mjs  package-lock.json  package.json  vercel.json  vite.config.js
questions/: algo_questions.json  backtracking_questions.json  codeduo.quizzes.json  dp_questions.json  graph_questions.json  system_design_questions.json
scripts/: backend-express.bat  backend-quart-api.bat  frontend.bat
(+175 files in other folders)
